# flyto-ai

./: NOTICE  README.md  pyproject.toml
docs/: MODEL_COMPATIBILITY.md  hn-launch.md
eval/: cases.yaml  rubric.yaml
flyto_ai/: __init__.py  __main__.py  agent.py  audit.py  cli.py  config.py  mcp_server.py  models.py  redaction.py  session.py  validation.py
flyto_ai/agents/: __init__.py  claude_code.py  evidence.py  guardian_hook.py  indexer_context.py  models.py  prompts.py  verifier.py
flyto_ai/evolution/: __init__.py  blocks.py  loop.py  models.py  mutator.py  runner.py  scorer.py
flyto_ai/memory/: __init__.py  bm25.py  embeddings.py  search.py  sqlite_store.py  summarizer.py
flyto_ai/prompt/: __init__.py  policies.py  system_prompt.py
flyto_ai/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
flyto_ai/sandbox/: Dockerfile  __init__.py  manager.py  runner.py
flyto_ai/static/: demo.html
flyto_ai/tools/: __init__.py  blueprint_tools.py  core_tools.py  inspect_page.py  registry.py
scripts/: demo_hn.sh  release.sh
tests/: conftest.py  manual_tg_test.py  test_agent_mode.py  test_agents.py  test_audit_fixes.py  test_auto_discover.py  test_browser_retry.py  test_cli.py  test_config.py  test_deep_integration.py  test_evolution.py  test_memory_search.py  test_ollama_flow.py  test_policies.py  test_prompt.py  test_redaction.py  test_sandbox.py  test_session.py  test_sprint1_sprint2.py  test_sprint3.py  test_sqlite_store.py  test_streaming.py  test_summarizer.py  test_telegram.py  test_tool_registry.py  test_validation.py
